--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# .gitignore
+
 # Python
 venv/
 __pycache__/
@@ -7,5 +9,5 @@ __pycache__/
 .idea/
 .vscode/
 
-# Environment variables
+# Environment variables -
 .env
